--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "terminaltables-whl"
-version = "3.1.2"
-description = "Generate simple tables in terminals from a nested list of strings. (has wheels!)"
+name = "terminaltables"
+version = "3.1.7"
+description = "Generate simple tables in terminals from a nested list of strings."
 authors = [
     "Robpol86 <robpol86@gmail.com>",
     "Matthew Martin <matthewdeanmartin@gmail.com>"
