--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "terminaltables"
-version = "3.1.9"
-description = "Generate simple tables in terminals from a nested list of strings."
+name = "terminaltables3"
+version = "4.0.0"
+description = "Generate simple tables in terminals from a nested list of strings. Fork of terminaltables."
 authors = [
     "Robpol86 <robpol86@gmail.com>",
     "Matthew Martin <matthewdeanmartin@gmail.com>"
@@ -18,48 +18,73 @@ classifiers = [
     "Operating System :: Microsoft :: Windows",
     "Operating System :: POSIX :: Linux",
     "Operating System :: POSIX",
-    "Programming Language :: Python :: 2.6",
-    "Programming Language :: Python :: 2.7",
-    "Programming Language :: Python :: 3.3",
-    "Programming Language :: Python :: 3.4",
-    "Programming Language :: Python :: 3.5",
-    "Programming Language :: Python :: 3.6",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: Implementation :: PyPy",
     "Topic :: Software Development :: Libraries",
     "Topic :: Terminals",
     "Topic :: Text Processing :: Markup",
 ]
 packages = [
-    { include = "terminaltables" },
+    { include = "terminaltables3" },
 ]
 include = [
-    "terminaltables/**/*.py",
+    "terminaltables3/**/*.py",
 ]
 exclude = [
 ]
 license = "MIT"
 readme = "README.md"
-repository = "https://github.com/matthewdeanmartin/terminaltables"
-homepage = "https://github.com/matthewdeanmartin/terminaltables"
-documentation = "https://github.com/matthewdeanmartin/terminaltables"
+repository = "https://github.com/matthewdeanmartin/terminaltables3"
+homepage = "https://github.com/matthewdeanmartin/terminaltables3"
+documentation = "https://github.com/matthewdeanmartin/terminaltables3"
 
 [tool.poetry.urls]
-"Bug Tracker" = "https://github.com/matthewdeanmartin/terminaltables/issues"
-"Change Log" = "https://github.com/matthewdeanmartin/terminaltables/blob/master/CHANGELOG.md"
+"Bug Tracker" = "https://github.com/matthewdeanmartin/terminaltables3/issues"
+"Change Log" = "https://github.com/matthewdeanmartin/terminaltables3/blob/master/CHANGELOG.md"
 
 [tool.poetry.scripts]
 
 
 [tool.poetry.dependencies]
 # per vermin's estimation
-python = ">=2.6 || >=3.0"
+python = ">=3.8"
 
 [tool.poetry.dev-dependencies]
-pytest = "==6.0.1"
+# complementary deps
+colorama=">=0.3.7"
+colorclass=">=2.2.0"
+termcolor = "*"
+
+# build deps
+pytest = ">=8.2.1"
+pytest-cov = ">=5.0.0"
+vermin = ">=1.6.0"
+tox = ">=4.15.0"
+isort = ">=5.13.2"
+bandit = ">=1.7.8"
+black = ">=24.4.2"
+pylint = ">=3.2.2"
+ruff = ">=0.4.5"
+mypy = ">=1.10.0"
+pillow = ">=10.3.0"
+pre-commit = ">=2"
+
+# pytest = ">=7.4.3"
+pytest-xdist =">=3.5.0"
+pytest-randomly=">=3.15.0"
+pytest-sugar =">=0.9.7"
+
+# pytest-snapshot = "*"
+# pytest-asyncio = "*"
+pytest-network= "*"
+
+
+# check-wheel-contents = "*" # requires <4
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
