--- a/tox.ini
+++ b/tox.ini
@@ -2,38 +2,22 @@
 name = terminaltables
 
 [tox]
-envlist = lint,py{34,27,26}
+envlist = py{38,39,310,311,312,313}
 
 [testenv]
 commands =
-    python -c "import os, sys; sys.platform == 'win32' and os.system('easy_install pillow')"
-    py.test --cov-report term-missing --cov-report xml --cov {[general]name} --cov-config tox.ini {posargs:tests}
+    python -c "import os, sys; sys.version_info[:3] <= (3, 12, 0) and os.system('pip install pillow')"
+    py.test --cov-report term-missing --cov-report xml --cov {[general]name}  {posargs:tests}
 deps =
-    colorama==0.3.7
-    colorclass==2.2.0
-    pytest-cov==2.4.0
-    termcolor==1.1.0
+    colorama>=0.3.7
+    colorclass>=2.2.0
+    pytest-cov>=2.4.0
+    termcolor>=1.1.0
 passenv =
     WINDIR
 setenv =
     PYTHON_EGG_CACHE = {envtmpdir}
 usedevelop = True
-
-[testenv:lint]
-commands =
-    python setup.py check --strict
-    python setup.py check --strict -m
-    python setup.py check --strict -s
-    python setup.py check_version
-    flake8 --application-import-names={[general]name},tests
-    pylint --rcfile=tox.ini setup.py {[general]name}
-deps =
-    flake8-docstrings==1.0.3
-    flake8-import-order==0.12
-    flake8==3.3.0
-    pep8-naming==0.4.1
-    pydocstyle==1.1.1
-    pylint==1.6.5
 
 [testenv:docs]
 changedir = {toxinidir}/docs
@@ -55,25 +39,24 @@ passenv =
     HOME
     HOSTNAME
     SSH_AUTH_SOCK
-    TRAVIS*
     USER
 usedevelop = False
+;
+;[flake8]
+;exclude = .tox/*,build/*,docs/*,env/*,get-pip.py
+;import-order-style = smarkets
+;max-line-length = 120
+;statistics = True
 
-[flake8]
-exclude = .tox/*,build/*,docs/*,env/*,get-pip.py
-import-order-style = smarkets
-max-line-length = 120
-statistics = True
+;[pylint]
+;disable =
+;    locally-disabled,
+;    too-few-public-methods,
+;    too-many-instance-attributes,
+;ignore = .tox/*,build/*,docs/*,env/*,get-pip.py
+;max-args = 6
+;max-line-length = 120
+;reports = no
 
-[pylint]
-disable =
-    locally-disabled,
-    too-few-public-methods,
-    too-many-instance-attributes,
-ignore = .tox/*,build/*,docs/*,env/*,get-pip.py
-max-args = 6
-max-line-length = 120
-reports = no
-
-[run]
-branch = True
+;[run]
+;branch = True
